ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-service-web
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-load-balancer-ip
    networking.gke.io/managed-certificates: "managed-cert"

spec:
  rules:
    # - host: test.zerobill.app
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port: 
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port: 
                  number: 5000
